# Ubuntu2Go

./: LICENSE  README.md  mkdocs.yml
docs/: index.md
docs/3D/: Applications of 3D reconstruction  glumpy.md
docs/command/: free.md
docs/deepthings/: something.md
docs/embedingsystem/: 3559A.md  pc_board_commu.md
docs/scripts/: compile.bazel  compile.gcc  compile.python  compile.tensorflow
docs/software/: centos.6.5.md  eigen.html  eigen.md  ffmpeg.md  tensorflow.md  tensorflow_redhat6.5.md
software/: compile_gcc4.8.2_redhat.sh
