## Download python 
current_dir=$(pwd)
file_name="bazel-0.5.4-dist.zip"
directory_name="bazel-0.5.4-dist"
url="https://github.com/bazelbuild/bazel/releases/download/0.5.4/bazel-0.5.4-dist.zip"
_sha256sum="2157b05309614d6af0e4bbc6065987aede590822634a0522161f3af5d647abc9"
if [ ! -f ./"$file_name" ]; then
	wget_out=$(wget -O "$file_name" "$url")
	if [ $? -ne 0 ]; then
		echo "Download Bazel failed"
		exit 1;
	fi
fi

## Check sha256 sum 
sha256sum_=$(sha256sum "$file_name" | cut -c -64) 
if [ "$_sha256sum" != "$sha256sum_" ]; then
	echo "Bazel dowloaded file sha256 sum dose not match"
	exit 1
fi
if [ -d ./"$directory_name" ]; then
	rm -rf "$directory_name"
	echo "remove old directories"
fi


unzip "$file_name" -d "$directory_name"

## start to run make
cd "$directory_name"
install_dir="$HOME"/"3rdparty"/"bazel"
mkdir -p "$install_dir"

#### change one spicific line to aviodi GLIBCXX_3.4.18 not found error
sed -i  '165s/False/True/'  "$current_dir"/"$directory_name"/src/main/java/com/google/devtools/build/lib/rules/SkylarkRuleImplementationFunctions.java
./compile.sh

cp output/bazel "$install_dir"



## prepaire python enviroment

#cd "$current_dir"
#touch "python27.env"

#echo "export LD_LIBRARY_PATH=""HOME"/3rdparty/python27/lib:$LD_LIBRARY_PATH >> "python27.env"
#echo -e "\n"
#echo "export LD_LIBRARY_PATH=""HOME"/3rdparty/python27/lib64:$LD_LIBRARY_PATH >> "python27.env"
#echo -e "\n"
#echo "export PATH=""HOME"/3rdparty/python27/bin:$PATH >> "python27.env"
#echo -e "\n"
#echo "export C_INCLUDE_PATH=""HOME"/3rdparty/python27/include:$C_INCLUDE_PATH >> "python27.env"
#echo -e "\n"
#echo "export CPLUS_INCLUDE_PATH=""HOME"/3rdparty/python27/include:$CPLUS_INCLUDE_PATH >> "python27.env"


#cp "python27.env" "$HOME"/".python27.env"


 
